# VC3

./: .gitignore  README.md  SOURCES.txt  Untitled-1  entry_points.txt  ml_applications.txt  pyproject.toml  python_snakes.txt
Programming_Java/: c_document.txt  java_document.txt  python_document.txt
sefs/: __init__.py  config.py  content_analyzer.py  database.py  file_monitor.py  main.py  models.py  os_synchronizer.py  semantic_engine.py  visual_interface.py
tests/: test_config.py  test_content_analyzer.py  test_file_monitor.py  test_integration.py  test_os_synchronizer.py  test_semantic_engine.py
