[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sefs"
version = "0.1.0"
description = "Semantic Entropy File System – self-organizing file management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0",
    "sentence-transformers>=2.2",
    "PyPDF2>=3.0",
    "chardet>=5.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "streamlit>=1.28",
    "plotly>=5.18",
    "streamlit-autorefresh>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.90",
    "pytest-cov>=4.1",
]

[project.scripts]
sefs = "sefs.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
